# BioPilot

./: .gitignore  INSTALL.md  QUICKSTART.md  README.md  SUPPORT.md  pyproject.toml
biopilot/: __init__.py  cli.py
biopilot/notebooks/: example_workflow.ipynb
biopilot/scripts/: example_analysis.py
biopilot/src/: __init__.py
biopilot/src/analyzer/: __init__.py  analysis.py
biopilot/src/annotation/: __init__.py  database.py
biopilot/src/dashboard/: app.py
biopilot/src/fetcher/: __init__.py  fetcher.py
biopilot/src/pipeline/: __init__.py  manager.py
biopilot/src/reproducibility/: __init__.py  logger.py
biopilot/tests/: test_biopilot.py
