[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biopilot"
version = "0.1.0"
description = "A lightweight, reproducible bioinformatics assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BioPilot Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "genomics", "RNA-seq", "analysis"]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "streamlit>=1.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
r = [
    "rpy2>=3.5.0",
]

[project.scripts]
biopilot = "biopilot.cli:main"

[project.urls]
Homepage = "https://github.com/biopilot/biopilot"
Documentation = "https://github.com/biopilot/biopilot#readme"
Repository = "https://github.com/biopilot/biopilot"

[tool.setuptools.packages.find]
where = ["."]
include = ["biopilot*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["biopilot/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
